--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -25,6 +25,9 @@
           <button mat-button>SHARE</button>
         </mat-card-actions>
       </mat-card>
+      <div [hidden]="dish">
+        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+      </div>
     </div>
   </div>
 
@@ -50,6 +53,9 @@
           </mat-list>
         </mat-card-content>
       </mat-card>
+      <div [hidden]="dish">
+        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+      </div>
     </div>
 
   </div>
