--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -55,7 +55,7 @@
 
   <h2>Corporate Leadership</h2>
   <div fxFlex>
-    <mat-list fxFlex>
+    <mat-list *ngIf="leaders" fxFlex>
       <mat-list-item *ngFor="let leader of leaders">
         <img matListAvatar src={{leader.image}} alt={{leader.name}}>
         <h1 matLine> {{leader.name}} </h1>
@@ -64,5 +64,8 @@
         </p>
       </mat-list-item>
     </mat-list>
+    <div [hidden]="leaders">
+      <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+    </div>
   </div>
 </div>
