--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -17,11 +17,9 @@
           <h1>{{dish.name | uppercase}}</h1>
         </mat-grid-tile-footer>
       </mat-grid-tile>
-      <div [hidden]="dishes">
-        <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
-      </div>
     </mat-grid-list>
-
   </div>
-
+  <div fxFlex [hidden]="dishes">
+    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
 </div>
