--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -14,7 +14,7 @@
             <h3>{{dish.name | uppercase}}</h3>
           </mat-card-title>
         </mat-card-header>
-        <img mat-card-image src={{dish.image}} alt={dish.name}}>
+        <img mat-card-image src="{{BaseURL + dish.image}}" alt={dish.name}}>
         <mat-card-content>
           <p>{{dish.description}}
           </p>
@@ -53,11 +53,58 @@
               </p>
             </mat-list-item>
           </mat-list>
+            <mat-list *ngIf="feedbackForm.valid">
+              <mat-list-item>
+                <h1 matLine>{{feedbackForm.get('message').value}}</h1>
+                <p matLine>
+                  {{feedbackForm.get('rating').value}} Stars
+                </p>
+                <p matLine>
+                  -- {{feedbackForm.get('firstname').value}} {{currentDate| date}}
+                </p>
+            </mat-list-item>
+            </mat-list>
         </mat-card-content>
       </mat-card>
     </div>
   </div>
   <div [hidden]="dish">
     <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
+</div>
+<!-- <div class="container"
+     fxLayout
+     fxLayout.xs="column"
+     fxLayoutAlign="center"
+     fxLayoutGap="10px"
+     fxLayoutGap.xs="0">
+  <div fxFlex="40%" fxFlexOffset="1000px"  fxFlexOffset.xs="0">
+
+  </div>
+</div> -->
+<div class="container"
+     fxLayout="column"
+     fxLayout.xs="column"
+     fxLayoutAlign="center"
+     fxLayoutGap="10px"
+     fxLayoutGap.xs="0">
+  <div class="form-size" >
+    <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
+      <p>
+        <mat-form-field class="full-width">
+          <input matInput formControlName="firstname" placeholder="First Name" type="text" required [(ngModel)]="firstname">
+          <mat-error *ngIf="formErrors.firstname">{{formErrors.firstname}}</mat-error>
+        </mat-form-field>
+      </p>
+      <mat-slider max="5" min="1"  thumbLabel tickInterval="1" [(ngModel)]="rating"></mat-slider>
+      <p>
+        <mat-form-field class="full-width">
+          <textarea matInput formControlName="message" placeholder="Your Feedback" rows=12 [(ngModel)]="message"></textarea>
+          <mat-error *ngIf="formErrors.message">{{formErrors.message}}</mat-error>
+        </mat-form-field>
+      </p>
+      <button type="submit" mat-button class="background-primary text-floral-white"
+        [disabled]="feedbackForm.invalid">Submit</button>
+    </form>
   </div>
 </div>
