--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,7 +6,7 @@
     fxLayoutGap="10px"
     fxLayoutGap.xs="0">
 
-  <div fxFlex="40"*ngIf="dish">
+  <div fxFlex="40"*ngIf="dish" [@visibility]="visibility">
     <div fxFlex >
       <mat-card>
         <mat-card-header>
@@ -37,7 +37,7 @@
     <h2>Error</h2>
     <h4>{{errMess}}</h4>
   </div>
-  <div fxFlex="40" *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
     <div fxFlex>
       <mat-card>
         <mat-card-header>
@@ -70,6 +70,21 @@
             </mat-list>
         </mat-card-content>
       </mat-card>
+      <form novalidate [formGroup]="commentForm" #cform="ngForm">
+        <p>
+          <mat-form-field class="full-width">
+            <input matInput formControlName="author" placeholder="Author Name" type="text" required [(ngModel)]="author">
+            <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
+          </mat-form-field>
+          <mat-slider max="5" min="1" step="1" thumbLabel tickInterval="1" [(ngModel)]="rating"></mat-slider>
+          <mat-form-field class="full-width">
+            <textarea matInput formControlName="comment" placeholder="Your Feedback" rows=12 [(ngModel)]="comment"></textarea>
+            <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
+          </mat-form-field>
+        </p>
+        <button type="submit" mat-button class="background-primary text-floral-white"
+          [disabled]="commentForm.invalid">Submit</button>
+      </form>
     </div>
   </div>
   <div [hidden]="dish || errMess">
@@ -78,41 +93,5 @@
   <div fxFlex *ngIf="errMess">
     <h2>Error</h2>
     <h4>{{errMess}}</h4>
-  </div>
-</div>
-<!-- <div class="container"
-     fxLayout
-     fxLayout.xs="column"
-     fxLayoutAlign="center"
-     fxLayoutGap="10px"
-     fxLayoutGap.xs="0">
-  <div fxFlex="40%" fxFlexOffset="1000px"  fxFlexOffset.xs="0">
-
-  </div>
-</div> -->
-<div class="container"
-     fxLayout="column"
-     fxLayout.xs="column"
-     fxLayoutAlign="center"
-     fxLayoutGap="10px"
-     fxLayoutGap.xs="0">
-  <div class="form-size" >
-    <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
-      <p>
-        <mat-form-field class="full-width">
-          <input matInput formControlName="firstname" placeholder="First Name" type="text" required [(ngModel)]="author">
-          <mat-error *ngIf="formErrors.author">{{formErrors.author}}</mat-error>
-        </mat-form-field>
-      </p>
-      <mat-slider max="5" min="1"  thumbLabel tickInterval="1" [(ngModel)]="rating"></mat-slider>
-      <p>
-        <mat-form-field class="full-width">
-          <textarea matInput formControlName="comment" placeholder="Your Feedback" rows=12 [(ngModel)]="comment"></textarea>
-          <mat-error *ngIf="formErrors.comment">{{formErrors.comment}}</mat-error>
-        </mat-form-field>
-      </p>
-      <button type="submit" mat-button class="background-primary text-floral-white"
-        [disabled]="commentForm.invalid">Submit</button>
-    </form>
   </div>
 </div>
